# BetBot

./: -  .env  .env.example  Dockerfile  Procfile  README.md  pyproject.toml
data/: demo_feed.jsonl  football_odds.sqlite3  moex_signals.sqlite3
src/bb_bet_signal/: __init__.py  cli.py  config.py  engine.py  football_api.py  football_engine.py  football_risk.py  football_service.py  logging_setup.py  models.py  moex_api.py  moex_engine.py  moex_longterm.py  moex_service.py  providers.py  service.py  storage.py  telegram.py
tests/: test_engine.py  test_football_engine.py  test_football_service.py  test_telegram.py
